Fixed so button text spacing is toggled though a class.

--- a/js/tinymce/skins/lightgray/Button.less
+++ b/js/tinymce/skins/lightgray/Button.less
@@ -150,6 +150,10 @@
 	.box-shadow(none);
 }
 
+.@{prefix}-btn-has-text .@{prefix}-ico {
+	padding-right: 5px;
+}
+
 // RTL
 
 .@{prefix}-rtl .@{prefix}-btn button {
